@@ -1,0 +1,13 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Net-Nessus
+version:      0.09
+version_from: lib/Net/Nessus/Client.pm
+installdirs:  site
+requires:
+    Data::Dumper:                  0
+    Net::Telnet:                   3.01
+    Term::ReadKey:                 0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
